--- a/IMDB movies dataset.ipynb
+++ b/IMDB movies dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "320d8692-f06d-4fd6-8e5a-102137c8b007",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e6153ca8-fc48-4036-b62c-5177b53f121d",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
        "4    John Fiedler       689845    4,360,000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f1b7ace4-04e5-4f55-9113-e4de58aed371",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "caa954f9-f513-4c49-ae26-bab9014b505a",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9e8a67f5-1596-4c2e-b853-9820595fd749",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "a6f16a8a-0628-460d-9353-fdfb50615b9d",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "ffc54340-2a83-41be-bbe3-dcc08b9d6edb",
    "metadata": {},
    "outputs": [
@@ -380,8 +380,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "9da5424b-0c6d-4b32-bbe6-4700c5ad6758",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Drama', 'Crime', 'Action', 'Adventure', 'Biography', 'History',\n",
+       "       'Sci-Fi', 'Romance', 'Western', 'Fantasy', 'Comedy', 'Thriller',\n",
+       "       'Animation', 'Family', 'War', 'Mystery', 'Music', 'Horror',\n",
+       "       'Musical', 'Film-Noir', 'Sport'], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split for genres\n",
+    "df['Genre'] = df['Genre'].astype(str)\n",
+    "genre_content = df.assign(genre=df['Genre'].str.split(',')).explode('genre')\n",
+    "genre_content['genre'] = genre_content['genre'].str.strip()\n",
+    "genre_content['genre'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9ee52f41-fbb5-4401-86b7-1bbf6a010deb",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +449,6 @@
        "      <th>Star4</th>\n",
        "      <th>No_of_Votes</th>\n",
        "      <th>Gross (M)</th>\n",
-       "      <th>genre</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -443,7 +470,6 @@
        "      <td>William Sadler</td>\n",
        "      <td>2343110</td>\n",
        "      <td>28.341469</td>\n",
-       "      <td>[Drama]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -463,7 +489,6 @@
        "      <td>Diane Keaton</td>\n",
        "      <td>1620367</td>\n",
        "      <td>134.966411</td>\n",
-       "      <td>[Crime,  Drama]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -483,7 +508,6 @@
        "      <td>Michael Caine</td>\n",
        "      <td>2303232</td>\n",
        "      <td>534.858444</td>\n",
-       "      <td>[Action,  Crime,  Drama]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -503,7 +527,6 @@
        "      <td>Diane Keaton</td>\n",
        "      <td>1129952</td>\n",
        "      <td>57.300000</td>\n",
-       "      <td>[Crime,  Drama]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -523,67 +546,215 @@
        "      <td>John Fiedler</td>\n",
        "      <td>689845</td>\n",
        "      <td>4.360000</td>\n",
-       "      <td>[Crime,  Drama]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BNGEwMT...</td>\n",
+       "      <td>Breakfast at Tiffany's</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>A</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>Comedy, Drama, Romance</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>A young New York socialite becomes interested ...</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>Blake Edwards</td>\n",
+       "      <td>Audrey Hepburn</td>\n",
+       "      <td>George Peppard</td>\n",
+       "      <td>Patricia Neal</td>\n",
+       "      <td>Buddy Ebsen</td>\n",
+       "      <td>166544</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BODk3Yj...</td>\n",
+       "      <td>Giant</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>G</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>Drama, Western</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>Sprawling epic covering the life of a Texas ca...</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>George Stevens</td>\n",
+       "      <td>Elizabeth Taylor</td>\n",
+       "      <td>Rock Hudson</td>\n",
+       "      <td>James Dean</td>\n",
+       "      <td>Carroll Baker</td>\n",
+       "      <td>34075</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BM2U3Yz...</td>\n",
+       "      <td>From Here to Eternity</td>\n",
+       "      <td>1953</td>\n",
+       "      <td>Passed</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>Drama, Romance, War</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>In Hawaii in 1941, a private is cruelly punish...</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>Fred Zinnemann</td>\n",
+       "      <td>Burt Lancaster</td>\n",
+       "      <td>Montgomery Clift</td>\n",
+       "      <td>Deborah Kerr</td>\n",
+       "      <td>Donna Reed</td>\n",
+       "      <td>43374</td>\n",
+       "      <td>30.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BZTBmMj...</td>\n",
+       "      <td>Lifeboat</td>\n",
+       "      <td>1944</td>\n",
+       "      <td>Unrated</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>Drama, War</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>Several survivors of a torpedoed merchant ship...</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>Alfred Hitchcock</td>\n",
+       "      <td>Tallulah Bankhead</td>\n",
+       "      <td>John Hodiak</td>\n",
+       "      <td>Walter Slezak</td>\n",
+       "      <td>William Bendix</td>\n",
+       "      <td>26471</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMTY5OD...</td>\n",
+       "      <td>The 39 Steps</td>\n",
+       "      <td>1935</td>\n",
+       "      <td>Unrated</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Crime, Mystery, Thriller</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>A man in London tries to help a counter-espion...</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>Alfred Hitchcock</td>\n",
+       "      <td>Robert Donat</td>\n",
+       "      <td>Madeleine Carroll</td>\n",
+       "      <td>Lucie Mannheim</td>\n",
+       "      <td>Godfrey Tearle</td>\n",
+       "      <td>51853</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>999 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         Poster_Link  \\\n",
-       "0  https://m.media-amazon.com/images/M/MV5BMDFkYT...   \n",
-       "1  https://m.media-amazon.com/images/M/MV5BM2MyNj...   \n",
-       "2  https://m.media-amazon.com/images/M/MV5BMTMxNT...   \n",
-       "3  https://m.media-amazon.com/images/M/MV5BMWMwMG...   \n",
-       "4  https://m.media-amazon.com/images/M/MV5BMWU4N2...   \n",
+       "                                           Poster_Link  \\\n",
+       "0    https://m.media-amazon.com/images/M/MV5BMDFkYT...   \n",
+       "1    https://m.media-amazon.com/images/M/MV5BM2MyNj...   \n",
+       "2    https://m.media-amazon.com/images/M/MV5BMTMxNT...   \n",
+       "3    https://m.media-amazon.com/images/M/MV5BMWMwMG...   \n",
+       "4    https://m.media-amazon.com/images/M/MV5BMWU4N2...   \n",
+       "..                                                 ...   \n",
+       "995  https://m.media-amazon.com/images/M/MV5BNGEwMT...   \n",
+       "996  https://m.media-amazon.com/images/M/MV5BODk3Yj...   \n",
+       "997  https://m.media-amazon.com/images/M/MV5BM2U3Yz...   \n",
+       "998  https://m.media-amazon.com/images/M/MV5BZTBmMj...   \n",
+       "999  https://m.media-amazon.com/images/M/MV5BMTY5OD...   \n",
        "\n",
-       "               Series_Title  Released_Year Certificate  Runtime (min)  \\\n",
-       "0  The Shawshank Redemption           1994           A          142.0   \n",
-       "1             The Godfather           1972           A          175.0   \n",
-       "2           The Dark Knight           2008          UA          152.0   \n",
-       "3    The Godfather: Part II           1974           A          202.0   \n",
-       "4              12 Angry Men           1957           U           96.0   \n",
+       "                 Series_Title  Released_Year Certificate  Runtime (min)  \\\n",
+       "0    The Shawshank Redemption           1994           A          142.0   \n",
+       "1               The Godfather           1972           A          175.0   \n",
+       "2             The Dark Knight           2008          UA          152.0   \n",
+       "3      The Godfather: Part II           1974           A          202.0   \n",
+       "4                12 Angry Men           1957           U           96.0   \n",
+       "..                        ...            ...         ...            ...   \n",
+       "995    Breakfast at Tiffany's           1961           A          115.0   \n",
+       "996                     Giant           1956           G          201.0   \n",
+       "997     From Here to Eternity           1953      Passed          118.0   \n",
+       "998                  Lifeboat           1944     Unrated           97.0   \n",
+       "999              The 39 Steps           1935     Unrated           86.0   \n",
        "\n",
-       "                  Genre  IMDB_Rating  \\\n",
-       "0                 Drama          9.3   \n",
-       "1          Crime, Drama          9.2   \n",
-       "2  Action, Crime, Drama          9.0   \n",
-       "3          Crime, Drama          9.0   \n",
-       "4          Crime, Drama          9.0   \n",
+       "                        Genre  IMDB_Rating  \\\n",
+       "0                       Drama          9.3   \n",
+       "1                Crime, Drama          9.2   \n",
+       "2        Action, Crime, Drama          9.0   \n",
+       "3                Crime, Drama          9.0   \n",
+       "4                Crime, Drama          9.0   \n",
+       "..                        ...          ...   \n",
+       "995    Comedy, Drama, Romance          7.6   \n",
+       "996            Drama, Western          7.6   \n",
+       "997       Drama, Romance, War          7.6   \n",
+       "998                Drama, War          7.6   \n",
+       "999  Crime, Mystery, Thriller          7.6   \n",
        "\n",
-       "                                            Overview  Meta_score  \\\n",
-       "0  Two imprisoned men bond over a number of years...        80.0   \n",
-       "1  An organized crime dynasty's aging patriarch t...       100.0   \n",
-       "2  When the menace known as the Joker wreaks havo...        84.0   \n",
-       "3  The early life and career of Vito Corleone in ...        90.0   \n",
-       "4  A jury holdout attempts to prevent a miscarria...        96.0   \n",
+       "                                              Overview  Meta_score  \\\n",
+       "0    Two imprisoned men bond over a number of years...        80.0   \n",
+       "1    An organized crime dynasty's aging patriarch t...       100.0   \n",
+       "2    When the menace known as the Joker wreaks havo...        84.0   \n",
+       "3    The early life and career of Vito Corleone in ...        90.0   \n",
+       "4    A jury holdout attempts to prevent a miscarria...        96.0   \n",
+       "..                                                 ...         ...   \n",
+       "995  A young New York socialite becomes interested ...        76.0   \n",
+       "996  Sprawling epic covering the life of a Texas ca...        84.0   \n",
+       "997  In Hawaii in 1941, a private is cruelly punish...        85.0   \n",
+       "998  Several survivors of a torpedoed merchant ship...        78.0   \n",
+       "999  A man in London tries to help a counter-espion...        93.0   \n",
        "\n",
-       "               Director           Star1           Star2          Star3  \\\n",
-       "0        Frank Darabont     Tim Robbins  Morgan Freeman     Bob Gunton   \n",
-       "1  Francis Ford Coppola   Marlon Brando       Al Pacino     James Caan   \n",
-       "2     Christopher Nolan  Christian Bale    Heath Ledger  Aaron Eckhart   \n",
-       "3  Francis Ford Coppola       Al Pacino  Robert De Niro  Robert Duvall   \n",
-       "4          Sidney Lumet     Henry Fonda     Lee J. Cobb  Martin Balsam   \n",
+       "                 Director              Star1              Star2  \\\n",
+       "0          Frank Darabont        Tim Robbins     Morgan Freeman   \n",
+       "1    Francis Ford Coppola      Marlon Brando          Al Pacino   \n",
+       "2       Christopher Nolan     Christian Bale       Heath Ledger   \n",
+       "3    Francis Ford Coppola          Al Pacino     Robert De Niro   \n",
+       "4            Sidney Lumet        Henry Fonda        Lee J. Cobb   \n",
+       "..                    ...                ...                ...   \n",
+       "995         Blake Edwards     Audrey Hepburn     George Peppard   \n",
+       "996        George Stevens   Elizabeth Taylor        Rock Hudson   \n",
+       "997        Fred Zinnemann     Burt Lancaster   Montgomery Clift   \n",
+       "998      Alfred Hitchcock  Tallulah Bankhead        John Hodiak   \n",
+       "999      Alfred Hitchcock       Robert Donat  Madeleine Carroll   \n",
        "\n",
-       "            Star4  No_of_Votes   Gross (M)                     genre  \n",
-       "0  William Sadler      2343110   28.341469                   [Drama]  \n",
-       "1    Diane Keaton      1620367  134.966411           [Crime,  Drama]  \n",
-       "2   Michael Caine      2303232  534.858444  [Action,  Crime,  Drama]  \n",
-       "3    Diane Keaton      1129952   57.300000           [Crime,  Drama]  \n",
-       "4    John Fiedler       689845    4.360000           [Crime,  Drama]  "
+       "              Star3           Star4  No_of_Votes   Gross (M)  \n",
+       "0        Bob Gunton  William Sadler      2343110   28.341469  \n",
+       "1        James Caan    Diane Keaton      1620367  134.966411  \n",
+       "2     Aaron Eckhart   Michael Caine      2303232  534.858444  \n",
+       "3     Robert Duvall    Diane Keaton      1129952   57.300000  \n",
+       "4     Martin Balsam    John Fiedler       689845    4.360000  \n",
+       "..              ...             ...          ...         ...  \n",
+       "995   Patricia Neal     Buddy Ebsen       166544    0.000000  \n",
+       "996      James Dean   Carroll Baker        34075    0.000000  \n",
+       "997    Deborah Kerr      Donna Reed        43374   30.500000  \n",
+       "998   Walter Slezak  William Bendix        26471    0.000000  \n",
+       "999  Lucie Mannheim  Godfrey Tearle        51853    0.000000  \n",
+       "\n",
+       "[999 rows x 16 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Split genres\n",
-    "df['Genre'] = df['Genre'].astype(str)\n",
-    "genre_content = df.assign(genre=df.Genre.str.split(',')).explode('Genre')\n",
-    "genre_content['Genre'] =  genre_content['Genre'].str.strip()\n",
-    "genre_content.head()"
+    "df = drop"
    ]
   },
   {
